--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,10 +4,15 @@ a {
 .main-panel {
     background-color: whitesmoke
 }
-.main-panel .ag-theme-quartz-dark {
+.main-panel .ag-theme-quartz-dark, .main-panel .ag-theme-quartz-dark {
     --ag-wrapper-border-radius: 18px;
 }
 
-.main-panel .ag-theme-quartz-dark .ag-root-wrapper.ag-ltr.ag-layout-normal {
+.main-panel .ag-theme-quartz-dark .ag-root-wrapper.ag-ltr.ag-layout-normal,
+.main-panel .ag-theme-quartz .ag-root-wrapper.ag-ltr.ag-layout-normal {
     box-shadow: 0 10px 30px rgb(83, 0, 106);
+}
+
+.dev {
+    border: 1px solid red;
 }
