--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,17 +13,6 @@ a {
     box-shadow: 0px 0px 30px 12px rgb(100, 5, 90);
 }
 
-.test {
-    width: 200px;
-    height: 200px;
-    background-color: red;
-}
-
-.skeleton {
-    opacity: .6;
-    animation: skeleton-loading 1s linear infinite alternate;
-}
-
 @keyframes skeleton-loading {
     0% {
         background-color: hsl(200, 20%, 70%);
@@ -31,4 +20,8 @@ a {
     100% {
         background-color: hsl(200, 20%, 90%);
     }
+}
+
+.dev {
+    border: 1px solid red;
 }
